k8s/infra/namespaces.yaml
#k8s/infra/namespaces.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: prompt-core

---
# to create separate ns for previews

apiVersion: v1
kind: Namespace
metadata:
  name: prompt-previews
