k8s/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prompt-main-ingress
  namespace: prompt-core
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx

  rules:
  - host: promptapp.8.231.116.253.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prompt-frontend
            port:
              number: 80

  - host: www.promptapp.8.231.116.253.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prompt-frontend
            port:
              number: 80

  - host: "*.previews.8.231.116.253.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prompt-me-proxy
            port:
              number: 80

  - host: api.8.231.116.253.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
